--- a/chaser.css
+++ b/chaser.css
@@ -2,7 +2,6 @@ body {
   text-align:center;
   margin-left:auto;
   margin-right:auto;
-  background-color: lemonchiffon;
   background-image: url("https://images.alphacoders.com/574/thumb-1920-57491.jpg");
 }
  
@@ -10,21 +9,27 @@ h1 {
   font-family: "Brush Script MT";
 }
 canvas {
-  border: 5px solid royalblue;
+  border: 5px solid rgb(64,125,120);
   margin: 20px;
   
 }
 progress {
   height:15px;
   width:600px;
-  border: 4px solid cadetBlue;
+  border: 4px solid rgb(64,125,120);
   radius:6px;
   background-color: blue ;
   color:royalblue;
 }
-#scoreKeeper{
-  font-family: Sans;
-}
-#canvas {
+
+#canvas{
   background-color:rgba(220,220,220, 0.5); 
+}
+#scoreKeeper{
+  display: inline-block;
+  width: 180px;
+  background-color:rgba(220,220,220, 0.8);
+  color: rgb(64,125,120);
+  font:32px  consolas;
+  font-weight: bold;
 }
