--- a/chaser.css
+++ b/chaser.css
@@ -1,35 +1,34 @@
 body {
-  text-align:center;
-  margin-left:auto;
-  margin-right:auto;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   background-image: url("https://images.alphacoders.com/574/thumb-1920-57491.jpg");
 }
- 
+
 h1 {
   font-family: "Brush Script MT";
 }
 canvas {
-  border: 5px solid rgb(64,125,120);
+  border: 5px solid rgb(64, 125, 120);
   margin: 20px;
-  
 }
 progress {
-  height:15px;
-  width:600px;
-  border: 4px solid rgb(64,125,120);
-  radius:6px;
-  background-color: blue ;
-  color:royalblue;
+  height: 15px;
+  width: 600px;
+  border: 4px solid rgb(64, 125, 120);
+  radius: 6px;
+  background-color: blue;
+  color: royalblue;
 }
 
-#canvas{
-  background-color:rgba(220,220,220, 0.5); 
+#canvas {
+  background-color: rgba(220, 220, 220, 0.5);
 }
-#scoreKeeper{
+#scoreKeeper {
   display: inline-block;
   width: 180px;
-  background-color:rgba(220,220,220, 0.8);
-  color: rgb(64,125,120);
-  font:32px  consolas;
+  background-color: rgba(220, 220, 220, 0.8);
+  color: rgb(64, 125, 120);
+  font: 32px consolas;
   font-weight: bold;
 }
